# looney

./: .gitignore  CMakeLists.txt  CmakePresets.json  README.md  run.ps1
cli/: build.ps1  config.ps1  vars.ps1
cmake/: Helpers.cmake
src/: CMakeLists.txt  main.cxx  main2.cxx
src/derivate/: CMakeLists.txt  derivative.fxx  derivative.hxx
src/function/: CMakeLists.txt  function.cxx  function.fxx  function.hxx
src/literals/: CMakeLists.txt  literals.hxx
src/series/: CMakeLists.txt  series.cxx  series.fxx  series.hxx
src/tensor/: tensor.fxx  tensor.hxx
src/vtk-interface/: CMakeLists.txt  vtk-interface.cxx  vtk-interface.hxx
